--- a/content/resources/21h-224s03-th.md
+++ b/content/resources/21h-224s03-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: The header of the U.S. Constitution. (Image courtesy of U.S. National
   Archives & Records Administration.)
-file: /media/courses/21h-224-law-and-society-in-us-history-spring-2003/a2c9ea005772f870a903e00a138320a5_21h-224s03-th.jpg
+file: /courses/21h-224-law-and-society-in-us-history-spring-2003/a2c9ea005772f870a903e00a138320a5_21h-224s03-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The header of the U.S. Constitution. (Image courtesy of [U.S. National
@@ -15,3 +15,5 @@ resourcetype: Image
 title: U.S. Constitution (thumbnail)
 uid: a2c9ea00-5772-f870-a903-e00a138320a5
 ---
+The header of the U.S. Constitution. (Image courtesy of U.S. National Archives & Records Administration.)
+
