--- a/content/resources/21h-224s03-th.md
+++ b/content/resources/21h-224s03-th.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Photograph of the header of the U.S. Constitution.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: U.S. Constitution (thumbnail)
 uid: a2c9ea00-5772-f870-a903-e00a138320a5
 ---
 The header of the U.S. Constitution. (Image courtesy of U.S. National Archives & Records Administration.)
-
