--- a/content/resources/21h-224s03.md
+++ b/content/resources/21h-224s03.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Photograph of the header of the U.S. Constitution.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: U.S. Constitution
 uid: 6edb13df-3120-7d8b-c4cf-3812a6ab2533
 ---
 The header of the U.S. Constitution. (Image courtesy of U.S. National Archives & Records Administration.)
-
