Sync all content

--- a/content/resources/21h-224s03-th.md
+++ b/content/resources/21h-224s03-th.md
@@ -3,6 +3,7 @@ content_type: resource
 description: The header of the U.S. Constitution. (Image courtesy of U.S. National
   Archives & Records Administration.)
 file: /courses/21h-224-law-and-society-in-us-history-spring-2003/a2c9ea005772f870a903e00a138320a5_21h-224s03-th.jpg
+file_size: 8204
 file_type: image/jpeg
 image_metadata:
   caption: The header of the U.S. Constitution. (Image courtesy of [U.S. National
