--- a/content/resources/21h-224s03.md
+++ b/content/resources/21h-224s03.md
@@ -3,6 +3,7 @@ content_type: resource
 description: The header of the U.S. Constitution. (Image courtesy of U.S. National
   Archives & Records Administration.)
 file: /courses/21h-224-law-and-society-in-us-history-spring-2003/6edb13df31207d8bc4cf3812a6ab2533_21h-224s03.jpg
+file_size: 76629
 file_type: image/jpeg
 image_metadata:
   caption: The header of the U.S. Constitution. (Image courtesy of [U.S. National
