Sync all content

--- a/content/resources/21h-224s03-th.md
+++ b/content/resources/21h-224s03-th.md
@@ -6,9 +6,8 @@ file: /ol-ocw-studio-app/courses/21h-224-law-and-society-in-us-history-spring-20
 file_size: 8204
 file_type: image/jpeg
 image_metadata:
-  caption: The header of the U.S. Constitution. (Image courtesy of {{% resource_link
-    "79432194-120d-42fe-9338-959455685b2d" "U.S. National Archives & Records Administration"
-    %}}.)
+  caption: The header of the U.S. Constitution. (Image courtesy of [U.S. National
+    Archives & Records Administration](http://www.archives.gov/).)
   credit: ''
   image-alt: Photograph of the header of the U.S. Constitution.
 learning_resource_types: []
